tests/assets/test_suites/w3c_wsdl20/documents/bad/InterfaceOperation-1B/echo-extended.wsdl
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/InterfaceOperation-1B/echo-extended.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<description xmlns="http://www.w3.org/ns/wsdl"
	xmlns:tns="http://www.wso2.com/wsdl/2006/interop/EchoService"
	xmlns:wsoap="http://www.w3.org/ns/wsdl/soap"
	xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
	targetNamespace="http://www.wso2.com/wsdl/2006/interop/EchoService"
	xmlns:wwis="http://www.wso2.com/schemas/2006/interop/EchoService">

	<documentation>
		This violates the assertion that requires if two operation that
		ended up in the same interface have the same name due to
		interface extension that they should be equivalent
	</documentation>

	<interface name="echoServiceInterface-extended"
		extends="echoServiceInterface">

		<operation pattern="http://www.w3.org/ns/wsdl/in-out"
			name="echo">
			<input element="wwis:echoXML" messageLabel="In" />
			<output element="wwis:echoXMLResponse" messageLabel="Out" />
		</operation>
	</interface>

	<binding interface="tns:echoServiceInterface-extended"
		type="http://www.w3.org/ns/wsdl/soap"
		name="echoServiceSOAPBinding"
		wsoap:protocol="http://www.w3.org/2003/05/soap/bindings/HTTP/">
		<operation
			wsoap:mep="http://www.w3.org/2003/05/soap/mep/soap-response"
			ref="tns:echoString" />
		<operation
			wsoap:mep="http://www.w3.org/2003/05/soap/mep/soap-response"
			ref="tns:echoXML" />
	</binding>
	<service name="echoService"
		interface="tns:echoServiceInterface-extended">
		<endpoint
			address="http://www-lk.wso2.com/axis2/services/EchoService"
			binding="tns:echoServiceSOAPBinding"
			name="echoServiceSOAPBinding_http" />
	</service>

</description>

